# LuaJIT-SDL3

./: CMakeLists.txt  README.md  sdl3_ffi.lua
generator/: cpp2ffi.lua  generator.lua
test/audio/: audiodrivers.lua  audiotest.lua  audiotest_nocallback.lua  loopwave.lua  sndfile_player.lua
test/camera/: camera_opengl.lua  read-and-draw.lua  read-process-draw.lua
test/threads/: main.lua  main2.lua  main_atomic.lua
test/video/: test-bmp.lua
